tests/machine/x/cpp/string_concat.mochi.error
line 13: ../../../tests/machine/x/cpp/string_concat.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_concat.mochi.cpp:13:21: error: invalid operands of types ‘const char [7]’ and ‘const char [6]’ to binary ‘operator+’
   13 |     print(("hello " + "world"));
      |            ~~~~~~~~ ^ ~~~~~~~
      |            |          |
      |            |          const char [6]
      |            const char [7]

 12 | int main() {
 13 |     print(("hello " + "world"));
 14 |     return 0;
